--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@
                     <div class="our-project-vr flex flex-col justify-end w-full h-96 p-10">
                         <div class="flex items-end">
                             <div>
-                                <img class="object-cover object-center" src="assets/image/testimonials.png" alt="project-1"
-                                    style="width: 340px;height: 400PX;">
+                                <img class="object-cover object-center" src="assets/image/testimonials.png"
+                                    alt="project-1" style="width: 340px;height: 400PX;">
                             </div>
                             <div style="width: 80%;" class="pl-16">
                                 <div class="ml-20">
@@ -435,11 +435,14 @@
                                     </div>
                                 </div>
                                 <p class="leading-relaxed tracking-wide pb-10">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum
                                     <br>
-                                    has been the industry's standard dummy text ever since the 1500s, when an unknown <br>
+                                    has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                    <br>
                                     printer took a galley of type and scrambled it to make a type specimen book. <br>
-                                    It has survived not only five centuries, but also the leap into electronic typesetting.
+                                    It has survived not only five centuries, but also the leap into electronic
+                                    typesetting.
                                 </p>
                                 <div class="flex justify-between">
                                     <div>
@@ -509,7 +512,53 @@
         </div>
         <div class="my-28"></div>
     </main>
-   
+    <footer>
+        <div class="footer overflow-hidden">
+            <div class="container mx-auto px-4 flex items-center py-20 text-xl">
+                <div class="w-1/3">
+                    <div class="flex flex-col justify-center items-start">
+                        <div class="logo">
+                            <img src="assets/image/logo.png" alt="logo" style="width: 160px;">
+                        </div>
+                        <div class="footer-contain mt-10 ">
+                            <p class="text-zinc-50 opacity-75 font-light text-2xl leading-relaxed tracking-wide">
+                                Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry. Lorem Ipsum has been<br> the industry's standard dummy text<br> ever since the 1500s, when an<br> unknown printer took a galley.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 flex-col justify-center items-center text-center">
+                    <div class="footer-title">
+                        <h4 class="font-2 text-yellow-400 uppercase font-medium text-4xl" >Reach us</h4>
+                    </div>
+                    <div class="banner-border-2 pb-4"></div>   
+                    <div class="footer-social-icon flex justify-evenly mt-10">
+                        <div class="calendly">
+                            <a href=""  class="flex flex-col items-center justify-center">
+                                <img src="assets/image/calendly.png" alt="Calendly" class="h-20">
+                                <span class="pt-5">Book a Meeting On<br> Calendly</span>
+                            </a>
+                        </div>
+                        <div class="whatsapp">
+                            <a href="" class=" flex flex-col items-center justify-center">
+                                <img src="assets/image/whatsapp.png" alt="whatsapp" class="h-20">
+                                <span class="pt-5">Connect With Us<br> On WhatsApp</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="footer-social-icon mt-10">
+                        <div class="email">
+                            <a href=""  class="flex flex-col items-center justify-center">
+                                <img src="assets/image/email.png" alt="email" class="h-20">
+                                <span class="pt-5">Contact<br> @twinreality.in</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 twin-reality-img footer-img relative"></div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
