--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
                                 <!-- Dropdown Menu -->
                                 <div class="dropdown-content">
                                     <a href="service-vr.html" class="gap-5 text-yellow-500">Virtual Reality</a>
-                                    <a href="" class="hover:text-yellow-500">VR Industrial Training</a>
+                                    <a href="service-vr-tranning.html" class="hover:text-yellow-500">VR Industrial Training</a>
                                     <a href="" class="hover:text-yellow-500">Metaverse Development</a>
                                     <a href="" class="hover:text-yellow-500">Virtual Event Managment</a>
                                     <a href="" class="hover:text-yellow-500">VR Consultation</a>
@@ -406,52 +406,103 @@
         <div class="gradiant-2 relative overflow-hidden">
             <!-- TESTIMONIAL -->
             <div class="testimontal">
-                <div class="container mx-auto px-4 flex items-center py-4 text-xl text-center">
-                    <div class="w-full mb-20">
-                        <h3 class="font-2 text-6xl">
-                            TESTIMONIAL
-                        </h3>
-                    </div>
-                </div>
-                <div class="container mx-auto px-4 flex py-4 text-xl">
-                    <div class="h-80"></div>
-                    <div class="our-project-vr flex flex-col justify-end w-full h-96 p-10">
-                        <div class="flex items-end">
-                            <div>
-                                <img class="object-cover object-center" src="assets/image/testimonials.png"
-                                    alt="project-1" style="width: 340px;height: 400PX;">
-                            </div>
-                            <div style="width: 80%;" class="pl-16">
-                                <div class="ml-20">
-                                    <div class="flex justify-end mb-24">
-                                        <img src="assets/image/Arrow 2.png" alt="Arrow 2" class="mr-10">
-                                        <img src="assets/image/Arrow 1.png" alt="Arrow 1">
+                <div class="container mx-auto px-4 flex items-center py-4 text-xl">
+                    <div class="w-full">
+                        <h2 class="text-center font-2 text-7xl mb-20">TESTIMONTAL​</h2>
+        
+                        <div class="relative overflow-hidden">
+                            <!-- Slider Content -->
+                            <div class="flex transition-transform duration-500 ease-in-out" id="testimontal-slider">
+                                <!-- Slide 1 -->
+                                <div class="min-w-full flex flex-col items-center p-6 rounded-lg">
+                                    <div class="our-project-vr flex flex-col justify-end w-full h-96 p-10">
+                                        <div class="flex items-end">
+                                            <div>
+                                                <img class="object-cover object-top" src="assets/image/testimonials.png"
+                                                    alt="project-1" style="width: 320px;height: 400PX;">
+                                            </div>
+                                            <div style="width: 80%;" class="pl-16">
+                                                <div class="ml-20">
+                                                    <div class="flex justify-end mb-24">
+                                                        <img src="assets/image/Arrow 2.png" alt="Arrow 2" class="mr-10">
+                                                        <img src="assets/image/Arrow 1.png" alt="Arrow 1">
+                                                    </div>
+                                                </div>
+                                                <p class="leading-relaxed tracking-wide pb-10">
+                                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                                    Lorem
+                                                    Ipsum
+                                                    <br>
+                                                    has been the industry's standard dummy text ever since the 1500s, when an
+                                                    unknown
+                                                    <br>
+                                                    printer took a galley of type and scrambled it to make a type specimen book.
+                                                    <br>
+                                                    It has survived not only five centuries, but also the leap into electronic
+                                                    typesetting.
+                                                </p>
+                                                <div class="flex justify-between">
+                                                    <div>
+                                                        <img src="assets/image/star.png" alt="star" class="pb-3">
+                                                        <span class="font-2 ">
+                                                            Yasheh Patel
+                                                        </span>
+                                                    </div>
+                                                    <div>
+                                                        <img src="assets/image/“.png" alt="“" class="ml-auto">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <p class="leading-relaxed tracking-wide pb-10">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum
-                                    <br>
-                                    has been the industry's standard dummy text ever since the 1500s, when an unknown
-                                    <br>
-                                    printer took a galley of type and scrambled it to make a type specimen book. <br>
-                                    It has survived not only five centuries, but also the leap into electronic
-                                    typesetting.
-                                </p>
-                                <div class="flex justify-between">
-                                    <div>
-                                        <img src="assets/image/star.png" alt="star" class="pb-3">
-                                        <span class="font-2 ">
-                                            Yasheh Patel
-                                        </span>
-                                    </div>
-                                    <div>
-                                        <img src="assets/image/“.png" alt="“" class="ml-auto">
+                                <!-- Slide 2 -->
+                                <div class="min-w-full flex flex-col items-center p-6 rounded-lg">
+                                    <div class="our-project-vr flex flex-col justify-end w-full h-96 p-10">
+                                        <div class="flex items-end">
+                                            <div>
+                                                <img class="object-cover object-center" src="assets/image/testimonials.png"
+                                                    alt="project-1" style="width: 320px;height: 400PX;">
+                                            </div>
+                                            <div style="width: 80%;" class="pl-16">
+                                                <div class="ml-20">
+                                                    <div class="flex justify-end mb-24">
+                                                        <img src="assets/image/Arrow 2.png" alt="Arrow 2" class="mr-10">
+                                                        <img src="assets/image/Arrow 1.png" alt="Arrow 1">
+                                                    </div>
+                                                </div>
+                                                <p class="leading-relaxed tracking-wide pb-10">
+                                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                                    Lorem
+                                                    Ipsum
+                                                    <br>
+                                                    has been the industry's standard dummy text ever since the 1500s, when an
+                                                    unknown
+                                                    <br>
+                                                    printer took a galley of type and scrambled it to make a type specimen book.
+                                                    <br>
+                                                    It has survived not only five centuries, but also the leap into electronic
+                                                    typesetting.
+                                                </p>
+                                                <div class="flex justify-between">
+                                                    <div>
+                                                        <img src="assets/image/star.png" alt="star" class="pb-3">
+                                                        <span class="font-2 ">
+                                                            Yasheh Patel
+                                                        </span>
+                                                    </div>
+                                                    <div>
+                                                        <img src="assets/image/“.png" alt="“" class="ml-auto">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <!-- Slider Container -->
                 </div>
             </div>
             <div class="my-28"></div>
@@ -553,6 +604,19 @@
             </div>
         </div>
     </footer>
+    <script>
+        const slider_1 = document.getElementById("testimontal-slider");
+        const totalSlides_1 = slider_1.children.length;
+        let currentIndex_1 = 0;
+
+        function slideNext() {
+            currentIndex_1 = (currentIndex_1 + 1) % totalSlides_1;
+            slider_1.style.transform = `translateX(-${currentIndex_1 * 100}%)`;
+        }
+
+        // Set interval for automatic sliding
+        setInterval(slideNext, 3000); // Slides change every 3 seconds
+    </script>
 </body>
 
 </html>
