service metaverse complete

--- a/service-vr.html
+++ b/service-vr.html
@@ -57,9 +57,9 @@
                             <div class="dropdown-content">
                                 <a href="service-vr.html" class="gap-5 text-yellow-500">Virtual Reality</a>
                                 <a href="service-vr-tranning.html" class="hover:text-yellow-500">VR Industrial Training</a>
-                                <a href="" class="hover:text-yellow-500">Metaverse Development</a>
-                                <a href="" class="hover:text-yellow-500">Virtual Event Managment</a>
-                                <a href="" class="hover:text-yellow-500">VR Consultation</a>
+                                <a href="service-metaverse.html" class="hover:text-yellow-500">Metaverse Development</a>
+                                <a href="service-virtual-event.html" class="hover:text-yellow-500">Virtual Event Managment</a>
+                                <a href="service-vr-consoltion.html" class="hover:text-yellow-500">VR Consultation</a>
                             </div>
                         </li>
                         <li><a href="" class="hover:text-yellow-500">AR/VR Times</a></li>
