service metaverse com

--- a/VR-Times.html
+++ b/VR-Times.html
@@ -48,7 +48,7 @@
                         <li><a href="home.html" class="text-yellow-500">Home</a></li>
                         <!-- Dropdown for Services -->
                         <li class="relative group dropdown">
-                            <a href="" class="flex items-center dropbtn text-yellow-500">
+                            <a href="" class="flex items-center dropbtn hover:text-yellow-500">
                                 Services
                                 <img class="w-3 m-2 " src="assets/image/down-arrow.png" alt="down arrow">
                             </a>
@@ -63,7 +63,7 @@
                                 <a href="service-vr-consoltion.html" class="hover:text-yellow-500">VR Consultation</a>
                             </div>
                         </li>
-                        <li><a href="VR-Times.html" class="hover:text-yellow-500">AR/VR Times</a></li>
+                        <li><a href="VR-Times.html" class="text-yellow-500">AR/VR Times</a></li>
                         <li><a href="" class="hover:text-yellow-500">Portfolio</a></li>
                         <li><a href="" class="hover:text-yellow-500">Contact Us</a></li>
                     </ul>
