--- a/service-virtual-event.html
+++ b/service-virtual-event.html
@@ -33,11 +33,10 @@
 <body>
     <!-- header -->
     <header>
-        <div class=" navbar">
-            <div
-                class="container mx-auto px-4 flex space-x-60 justify-center justify-between items-center py-4 text-xl">
+        <div class="navbar mt-6">
+            <div class="flex justify-evenly items-center text-xl">
                 <!-- Logo -->
-                <div>
+                <div class="">
                     <a href="home.html">
                         <img src="assets/image/logo.png" alt="logo" style="width: 140px;">
                     </a>
@@ -59,11 +58,12 @@
                                 <a href="service-vr-tranning.html" class="hover:text-yellow-500">VR Industrial
                                     Training</a>
                                 <a href="service-metaverse.html" class="hover:text-yellow-500">Metaverse Development</a>
-                                <a href="service-virtual-event.html" class="text-yellow-500">Virtual Event Managment</a>
+                                <a href="service-virtual-event.html" class="text-yellow-500">Virtual Event
+                                    Managment</a>
                                 <a href="service-vr-consoltion.html" class="hover:text-yellow-500">VR Consultation</a>
                             </div>
                         </li>
-                        <li><a href="" class="hover:text-yellow-500">AR/VR Times</a></li>
+                        <li><a href="VR-Times.html" class="hover:text-yellow-500">AR/VR Times</a></li>
                         <li><a href="" class="hover:text-yellow-500">Portfolio</a></li>
                         <li><a href="" class="hover:text-yellow-500">Contact Us</a></li>
                     </ul>
