--- a/service-vr-consoltion.html
+++ b/service-vr-consoltion.html
@@ -33,11 +33,10 @@
 <body>
     <!-- header -->
     <header>
-        <div class=" navbar">
-            <div
-                class="container mx-auto px-4 flex space-x-60 justify-center justify-between items-center py-4 text-xl">
+        <div class="navbar mt-6">
+            <div class="flex justify-evenly items-center text-xl">
                 <!-- Logo -->
-                <div>
+                <div class="">
                     <a href="home.html">
                         <img src="assets/image/logo.png" alt="logo" style="width: 140px;">
                     </a>
@@ -59,11 +58,12 @@
                                 <a href="service-vr-tranning.html" class="hover:text-yellow-500">VR Industrial
                                     Training</a>
                                 <a href="service-metaverse.html" class="hover:text-yellow-500">Metaverse Development</a>
-                                <a href="service-virtual-event.html" class="hover:text-yellow-500">Virtual Event Managment</a>
+                                <a href="service-virtual-event.html" class="hover:text-yellow-500">Virtual Event
+                                    Managment</a>
                                 <a href="service-vr-consoltion.html" class="text-yellow-500">VR Consultation</a>
                             </div>
                         </li>
-                        <li><a href="" class="hover:text-yellow-500">AR/VR Times</a></li>
+                        <li><a href="VR-Times.html" class="hover:text-yellow-500">AR/VR Times</a></li>
                         <li><a href="" class="hover:text-yellow-500">Portfolio</a></li>
                         <li><a href="" class="hover:text-yellow-500">Contact Us</a></li>
                     </ul>
@@ -94,7 +94,7 @@
     <!-- main -->
     <main>
         <!-- banner -->
-        <div class="sub-banner bg-center bg-top bg-cover bg-no-repeat p-40">
+        <div class="sub-banner relative bg-center bg-top bg-cover bg-no-repeat p-40">
             <div class="container mx-auto px-4 flex items-center py-4 text-xl">
                 <div class="w-3/5 flex items-center ">
                     <h1 class="font-2 text-7xl leading-normal mt-20">
@@ -155,9 +155,186 @@
                 </div>
             </div>
         </div>
-        
         <div class="my-28"></div>
-        <div class="gradiant-2  relative overflow-hidden">
+        <!-- Steps -->
+        <div class="steps">
+            <div class="container mx-auto px-4 flex items-center py-4 text-xl">
+                <div class="w-full flex justify-between items-center">
+                    <div class="mr-10">
+                        <div class="flex items-center">
+                            <h5 class="text-yellow-500 text-5xl">01.</h5> <span class="font-2 text-2xl ml-5">Step
+                                1</span>
+                        </div>
+                        <p class="text-zinc-300 font-light mt-8 leading-relaxed tracking-wide">
+                            A thorough understanding of your<br> requirment is gained through our virtual<br> meetings,
+                            where we ask detailed questions<br> and gather detailed information.
+                        </p>
+                    </div>
+                    <div class="h-64 border border-zinc-50 border-solid opacity-10"></div>
+                    <div class="mx-10">
+                        <div class="flex items-center">
+                            <h5 class="text-yellow-500 text-5xl">02.</h5> <span class="font-2 text-2xl ml-5">Step
+                                2</span>
+                        </div>
+                        <p class="text-zinc-300 font-light mt-8 leading-relaxed tracking-wide">
+                            Once we've figured out what you need,<br> we'll give you some advice on how to<br> move
+                            forward with your idea.
+                        </p>
+                    </div>
+                    <div class="h-64 border border-zinc-50 border-solid opacity-10"></div>
+                    <div class="mx-10">
+                        <div class="flex items-center">
+                            <h5 class="text-yellow-500 text-5xl">03.</h5> <span class="font-2 text-2xl ml-5">Step
+                                3</span>
+                        </div>
+                        <p class="text-zinc-300 font-light mt-8 leading-relaxed tracking-wide">
+                            If you have a clear plan for approaching a<br> developer with your proposal, we can<br> help
+                            you discover one. ​
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="my-28"></div>
+        <!-- Don't just take our word for it -->
+        <div class="takeOurWord">
+            <div class="mt-28"></div>
+            <div class="container mx-auto px-4 flex items-center py-4 text-xl">
+                <div class="w-full">
+                    <div class="">
+                        <h3 class="font-2 text-6xl  text-center">
+                            DON'T JUST TAKE OUR WORD FOR IT
+                        </h3>
+                    </div>
+                    <div class="flex mt-28">
+                        <div class="w-1/2 mr-5">
+                            <div class="our-project-vr flex flex-col justify-end h-72 p-8">
+                                <div class="flex items-end">
+                                    <div>
+                                        <img class="object-cover object-top" src="assets/image/testimonial-1.png"
+                                            alt="project-1" style="width: 320px;height: 320px;">
+                                    </div>
+                                    <div style="width: 80%;" class="pl-8">
+                                        <p class="text-xl leading-relaxed tracking-wide pb-7">
+                                            It's fantastic that we attend the consultation<br> session. Now I have more
+                                            clear view of my XR app
+                                        </p>
+                                        <div class="flex justify-between">
+                                            <div>
+                                                <img src="assets/image/star.png" alt="star" class="pb-3">
+                                                <span class="font-2 text-lg">
+                                                    Mark -<span class="text-zinc-300 font-2 text-lg"> Founder Travel
+                                                        VR</span>
+                                                </span>
+                                            </div>
+                                            <div>
+                                                <img src="assets/image/“.png" alt="“" class="ml-auto w-10 h-10">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-1/2 ml-5">
+                            <div class="our-project-vr flex flex-col justify-end h-72 p-8">
+                                <div class="flex items-end">
+                                    <div>
+                                        <img class="object-cover object-top" src="assets/image/testimonial-2.png"
+                                            alt="project-1" style="width: 320px;height: 320px;">
+                                    </div>
+                                    <div style="width: 80%;" class="pl-8">
+                                        <p class="text-lg leading-relaxed tracking-wide pb-7">
+                                            We are developing Medical VR app and has some doubts related to implication.
+                                            The meeting was fruitful.
+                                        </p>
+                                        <div class="flex justify-between">
+                                            <div>
+                                                <img src="assets/image/star.png" alt="star" class="pb-3">
+                                                <span class="font-2 text-lg">
+                                                    Alexis -<span class="text-zinc-300 font-2 text-lg"> CEO Medical
+                                                        Training</span>
+                                                </span>
+                                            </div>
+                                            <div>
+                                                <img src="assets/image/“.png" alt="“" class="ml-auto w-10 h-10">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="my-28"></div>
+        <div class="gradiant-2 gradiant-3  relative overflow-hidden">
+            <!-- images-para -->
+            <div class="imagePara">
+                <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
+                    <div class="w-full flex justify-start mt-20">
+                        <div class="w-1/2 flex flex-col justify-center" style="height: 395px;">
+                            <div class="flex items-center">
+                                <span class="text-5xl text-yellow-500">01.</span>
+                                <p class="font-2 text-2xl pl-5">Objective</p>
+                            </div>
+                            <div class="">
+                                <p class="mt-10 leading-loose tracking-wider font-light text-zinc-300">
+                                    Our consultations' objectives are to build networks and assist<br> customers in
+                                    achieving their objectives.
+                                </p>
+                            </div>
+                        </div>
+                        <div class=" border border-zinc-50 border-solid opacity-10" style="height: 395px;">
+                        </div>
+                        <div class="w-1/2 h-96 pt-16">
+                            <img src="assets/image/object1.png" alt="tranning-img" class="object-cover object-top"
+                                style="width: 100%; height: 330px;">
+                        </div>
+                    </div>
+                    <div class="w-full flex items-start">
+                        <div class="w-1/2">
+                            <img src="assets/image/object2.png" alt="metaverse" class="object-cover object-top"
+                                style="width: 100%; height: 330px;">
+                        </div>
+                        <div class=" border border-zinc-50 border-solid opacity-10" style="height: 330px;">
+                        </div>
+                        <div class="w-1/2 flex flex-col justify-center pl-20" style="height: 330px;">
+                            <div class="flex items-center">
+                                <span class="text-5xl text-yellow-500">02.</span>
+                                <p class="font-2 text-2xl pl-5">Idea is not enough</p>
+                            </div>
+                            <div class="">
+                                <p class="mt-10 leading-loose tracking-wider font-light text-zinc-300">
+                                    Having an app idea alone is insufficient. You must plan ahead<br> in order to put it
+                                    into action.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-full flex justify-start">
+                        <div class="w-1/2 flex flex-col justify-center" style="height: 395px;">
+                            <div class="flex items-center">
+                                <span class="text-5xl text-yellow-500">03.</span>
+                                <p class="font-2 text-2xl pl-5">AR/VR/XR</p>
+                            </div>
+                            <div class="">
+                                <p class="mt-10 leading-loose tracking-wider font-light text-zinc-300">
+                                    We worked with specific businesses to develop AR, VR, and XR<br> applications that
+                                    were extremely beneficial to their sector.
+                                </p>
+                            </div>
+                        </div>
+                        <div class=" border border-zinc-50 border-solid opacity-10" style="height: 395px;">
+                        </div>
+                        <div class="w-1/2 h-96">
+                            <img src="assets/image/object3.png" alt="tranning-img" class="object-cover object-center "
+                                style="width: 100%; height: 330px;transform: rotatey(180deg);">
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- COMPANIES -->
             <div class="company relative" style="height: 500px;">
                 <div class="mt-28"></div>
@@ -209,8 +386,8 @@
                     </div>
                 </div>
             </div>
+            <div class="my-16"></div>
         </div>
-        <div class="my-16"></div>
     </main>
     <footer>
         <div class="footer overflow-hidden">
