--- a/service-virtual-event.html
+++ b/service-virtual-event.html
@@ -158,7 +158,7 @@
 
                     <div class="relative overflow-hidden">
                         <!-- Slider Content -->
-                        <div class="flex transition-transform duration-500 ease-in-out" id="video-slider">
+                        <div class="flex transition-transform duration-500 ease-in-out" id="testimontal-slider">
                             <!-- Slide 1 -->
                             <div class="min-w-full flex flex-col items-center text-center p-6 rounded-lg">
                                 <div class="vr-videos  vr-video-2 relative bg-center bg-cover bg-no-repeat flex justify-center items-center"
@@ -392,19 +392,7 @@
         </div>
     </footer>
     <!-- JavaScript for Automatic Slider -->
-    <script>
-        const slider = document.getElementById("video-slider");
-        const totalSlides = slider.children.length;
-        let currentIndex = 0;
-
-        function slideNext() {
-            currentIndex = (currentIndex + 1) % totalSlides;
-            slider.style.transform = `translateX(-${currentIndex * 100}%)`;
-        }
-
-        // Set interval for automatic sliding
-        setInterval(slideNext, 3000); // Slides change every 3 seconds
-    </script>
+    <script src="js/slider.js"></script>
 </body>
 
 </html>
