--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
         rel="stylesheet">
     <!-- font-awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-
+    
 </head>
 
 <body>
@@ -48,7 +48,7 @@
                         <li><a href="home.html" class="text-yellow-500">Home</a></li>
                         <!-- Dropdown for Services -->
                         <li class="relative group dropdown">
-                            <a href="" class="flex items-center dropbtn text-yellow-500">
+                            <a href="" class="flex items-center dropbtn hover:text-yellow-500">
                                 Services
                                 <img class="w-3 m-2 " src="assets/image/down-arrow.png" alt="down arrow">
                             </a>
@@ -603,19 +603,7 @@
             </div>
         </div>
     </footer>
-    <script>
-        const slider_1 = document.getElementById("testimontal-slider");
-        const totalSlides_1 = slider_1.children.length;
-        let currentIndex_1 = 0;
-
-        function slideNext() {
-            currentIndex_1 = (currentIndex_1 + 1) % totalSlides_1;
-            slider_1.style.transform = `translateX(-${currentIndex_1 * 100}%)`;
-        }
-
-        // Set interval for automatic sliding
-        setInterval(slideNext, 3000); // Slides change every 3 seconds
-    </script>
+    <script src="js/slider.js"></script>
 </body>
 
 </html>
